--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -11,9 +11,9 @@
         android:title="@string/favorites" />
 
     <item
-        android:id="@+id/divider"
-        android:icon="@drawable/ic_divider"
-        android:title="@string/divider" />
+        android:id="@+id/add"
+        android:icon="@drawable/ic_add"
+        android:title="@string/add" />
 
     <item
         android:id="@+id/messages"
