--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dp48">48dp</dimen>
-    <dimen name="dp16">16dp</dimen>
-    <dimen name="dp36">36dp</dimen>
-    <dimen name="dp20">20dp</dimen>
-    <dimen name="dp10">10dp</dimen>
-    <dimen name="sp16">16sp</dimen>
-    <dimen name="dp155">155dp</dimen>
-    <dimen name="dp8">8dp</dimen>
-    <dimen name="sp18">18sp</dimen>
+    <dimen name="radius">10dp</dimen>
+
+    <dimen name="dp1">1dp</dimen>
+    <dimen name="dp3">3dp</dimen>
     <dimen name="dp4">4dp</dimen>
-    <dimen name="sp14">14sp</dimen>
-    <dimen name="dp18">18dp</dimen>
+    <dimen name="dp8">8dp</dimen>
+    <dimen name="dp10">10dp</dimen>
     <dimen name="dp12">12dp</dimen>
+    <dimen name="dp16">16dp</dimen>
+    <dimen name="dp18">18dp</dimen>
+    <dimen name="dp20">20dp</dimen>
     <dimen name="dp24">24dp</dimen>
+    <dimen name="dp36">36dp</dimen>
+    <dimen name="dp48">48dp</dimen>
+    <dimen name="dp155">155dp</dimen>
+    <dimen name="dp291">291dp</dimen>
+    <dimen name="dp300">300dp</dimen>
+
+    <dimen name="sp14">14sp</dimen>
+    <dimen name="sp16">16sp</dimen>
+    <dimen name="sp18">18sp</dimen>
+    <dimen name="sp24">24sp</dimen>
 </resources>
